Try and fix a weird Travis build failure

--- a/test/example.xhtml
+++ b/test/example.xhtml
@@ -5,11 +5,7 @@
  <head>
  <title>XHTML 1.0 Strict Example</title>
  <script type="application/javascript">
- <![CDATA[
- function loadpdf() {
-    document.getElementById("pdf-object").src="http://www.w3.org/TR/xhtml1/xhtml1.pdf";
- }
- ]]>
+ <![CDATA[function loadpdf() {document.getElementById("pdf-object").src="http://www.w3.org/TR/xhtml1/xhtml1.pdf";}]]>
  </script>
  </head>
  <body onload="loadpdf()">
